--- a/CPU_Scheduling_Algorithm/My Project/Resources.resx
+++ b/CPU_Scheduling_Algorithm/My Project/Resources.resx
@@ -130,6 +130,9 @@
   <data name="Restart(800 x 450 px) (40 x 40 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Restart(800 x 450 px) (40 x 40 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Cute Wood snow1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Cute Wood snow1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="fCFS (228 x 81 px) (2)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fCFS (228 x 81 px) (2)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -178,6 +181,9 @@
   <data name="Loading.800 x 450 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Loading.800 x 450 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="B(800 x 450 px) (40 x 40 px) (176 x 82 px)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\B(800 x 450 px) (40 x 40 px) (176 x 82 px)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Menu(800 x 450 px) (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Menu(800 x 450 px) (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -186,6 +192,9 @@
   </data>
   <data name="menu(800 x 450 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\menu(800 x 450 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PriorityUIi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PriorityUIi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Cute Wood Game Button Twitch Panel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Cute Wood Game Button Twitch Panel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,9 +217,6 @@
   <data name="Cute Wood Game Button Twitch Panel (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Cute Wood Game Button Twitch Panel (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Untitled (400 x 300 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Untitled (400 x 300 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="PriorityUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PriorityUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -220,8 +226,8 @@
   <data name="Lagoon.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lagoon.1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="B(800 x 450 px) (40 x 40 px) (176 x 82 px)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\B(800 x 450 px) (40 x 40 px) (176 x 82 px)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Untitled (400 x 300 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Untitled (400 x 300 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="B(800 x 450 px) (40 x 40 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\B(800 x 450 px) (40 x 40 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -253,7 +259,7 @@
   <data name="artificial intelligence (800 x 450 px)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\artificial intelligence (800 x 450 px).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Cute Wood snow1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Cute Wood snow1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="RoundRobinUIi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RoundRobinUIi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
